# python_app

server/: .env.template  .gitignore  pyproject.toml
server/city/: admin.py  apps.py  models.py
server/city/migrations/: 0001_initial.py
server/config/: settings.py  urls.py
server/config/dev/: settings.py
server/config/prod/: settings.py
server/core/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
server/core/migrations/: 0001_initial.py  0002_alter_user_city.py  0003_delete_platform.py  0004_delete_product_remove_user_city_delete_userincome_and_more.py  0005_telegrammedia_delete_mailing.py
server/distribution_platform/: admin.py  apps.py  models.py
server/distribution_platform/migrations/: 0001_initial.py
server/income/: admin.py  apps.py  models.py
server/income/migrations/: 0001_initial.py
server/mailing/: admin.py  apps.py  models.py
server/mailing/migrations/: 0001_initial.py
server/mailings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/mailings/migrations/: 0001_initial.py  0002_remove_mailing_instant.py
server/product/: admin.py  apps.py  models.py
server/product/migrations/: 0001_initial.py  0002_product_cost.py  0003_alter_product_options_alter_product_cost.py
server/users/: apps.py  models.py  serializers.py  urls.py  views.py
server/users/migrations/: 0001_initial.py  0002_user_last_login_user_password.py  0003_user_username.py  0004_alter_user_managers_user_date_joined_user_groups_and_more.py  0005_alter_user_username.py  0007_user_username.py  (+4 more)
(+21 files in other folders)
